# estudo-de-engenharia-de-software

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  install.py  main.py  manage.py  pyproject.toml
src/projeto_previsao/: __main__.py  core.py  inicialize_db.py
src/projeto_previsao/config/: settings.py
src/projeto_previsao/database/: apps.py  models.py
tests/: test_core.py
